[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/objects/pi.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/objects/blocks.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/objects/AndroidControls.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/objects/fake_blocks.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/objects/door.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/img/button.png" type="Texture" id=6]
[ext_resource path="res://assets/img/block.png" type="Texture" id=7]
[ext_resource path="res://scripts/level_scripts/Fase7.gd" type="Script" id=8]
[ext_resource path="res://scenes/objects/MusicController.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/objects/text.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.36896, 7.41534 )

[sub_resource type="Animation" id=2]
resource_name = "hide_door"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../../real_blocks:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../chao1:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../fake_blocks:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "show_floor"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../../chao1/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../chao1/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 48, 12 )

[node name="Fase7" type="Node2D"]
script = ExtResource( 8 )

[node name="real_blocks" parent="." instance=ExtResource( 2 )]
z_as_relative = false
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 46, 0, 0, 47, 0, 0, 48, 0, 0, 49, 0, 0, 50, 0, 0, 51, 0, 0, 52, 0, 0, 65536, 0, 0, 65588, 0, 0, 131072, 0, 0, 131124, 0, 0, 196608, 0, 0, 196660, 0, 0, 262144, 0, 0, 262194, 0, 0, 262195, 0, 0, 262196, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327723, 0, 0, 327724, 0, 0, 327725, 0, 0, 327726, 0, 0, 327732, 0, 0, 393216, 0, 0, 393268, 0, 0, 458752, 0, 0, 458804, 0, 0, 524288, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 524327, 0, 0, 524328, 0, 0, 524329, 0, 0, 524337, 0, 0, 524338, 0, 0, 524339, 0, 0, 524340, 0, 0, 589824, 0, 0, 589876, 0, 0, 655360, 0, 0, 655412, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720930, 0, 0, 720931, 0, 0, 720932, 0, 0, 720933, 0, 0, 720948, 0, 0, 786432, 0, 0, 786484, 0, 0, 851968, 0, 0, 852020, 0, 0, 917504, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917543, 0, 0, 917544, 0, 0, 917545, 0, 0, 917556, 0, 0, 983040, 0, 0, 983092, 0, 0, 1048576, 0, 0, 1048628, 0, 0, 1114112, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114146, 0, 0, 1114147, 0, 0, 1114148, 0, 0, 1114149, 0, 0, 1114155, 0, 0, 1114156, 0, 0, 1114157, 0, 0, 1114158, 0, 0, 1114164, 0, 0, 1179648, 0, 0, 1179700, 0, 0, 1245184, 0, 0, 1245236, 0, 0, 1310720, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310741, 0, 0, 1310742, 0, 0, 1310743, 0, 0, 1310750, 0, 0, 1310751, 0, 0, 1310752, 0, 0, 1310759, 0, 0, 1310760, 0, 0, 1310761, 0, 0, 1310772, 0, 0, 1441791, 0, 0, 1376308, 0, 0, 1507327, 0, 0, 1441798, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441808, 0, 0, 1441809, 0, 0, 1441810, 0, 0, 1441811, 0, 0, 1441844, 0, 0, 1572863, 0, 0, 1507380, 0, 0, 1638399, 0, 0, 1572864, 0, 0, 1572865, 0, 0, 1572866, 0, 0, 1572867, 0, 0, 1572868, 0, 0, 1572916, 0, 0 )

[node name="fake_blocks" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327714, 0, 0, 327715, 0, 0, 327716, 0, 0, 327717, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 720939, 0, 0, 720940, 0, 0, 720941, 0, 0, 720942, 0, 0, 917534, 0, 0, 917535, 0, 0, 917536, 0, 0, 917553, 0, 0, 917554, 0, 0, 917555, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310769, 0, 0, 1310770, 0, 0, 1310771, 0, 0, 1441817, 0, 0, 1441818, 0, 0, 1441819, 0, 0, 1441820, 0, 0, 1441826, 0, 0, 1441827, 0, 0, 1441828, 0, 0, 1441829, 0, 0, 1441835, 0, 0, 1441836, 0, 0, 1441837, 0, 0, 1441838, 0, 0 )

[node name="door" parent="." instance=ExtResource( 5 )]
position = Vector2( 49.3884, 85.3071 )
local = "res://scenes/fases/Fase5.tscn"

[node name="pi" parent="." instance=ExtResource( 1 )]
position = Vector2( 36.5992, 540.661 )
jump = -650

[node name="botoes" type="Node" parent="."]

[node name="botao1" type="Area2D" parent="botoes"]
position = Vector2( 1248, 72 )

[node name="Sprite" type="Sprite" parent="botoes/botao1"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoes/botao1"]
position = Vector2( -2.73291, 0.525558 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="botoes/botao1"]
anims/hide_door = SubResource( 2 )
anims/show_floor = SubResource( 3 )

[node name="botao2" type="Area2D" parent="botoes"]
position = Vector2( 1248, 168 )

[node name="Sprite" type="Sprite" parent="botoes/botao2"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoes/botao2"]
position = Vector2( -2.71568, 1.12378 )
shape = SubResource( 1 )

[node name="botao3" type="Area2D" parent="botoes"]
position = Vector2( 24, 240 )
rotation = 3.14159

[node name="Sprite" type="Sprite" parent="botoes/botao3"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoes/botao3"]
position = Vector2( -2.71568, 1.12378 )
shape = SubResource( 1 )

[node name="chao1" type="StaticBody2D" parent="."]
position = Vector2( 192, 120 )

[node name="Sprite" type="Sprite" parent="chao1"]
visible = false
position = Vector2( -24, 0 )
scale = Vector2( 4, 1 )
texture = ExtResource( 7 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="chao1"]
position = Vector2( 24, 12 )
shape = SubResource( 4 )
disabled = true

[node name="song" parent="." instance=ExtResource( 9 )]

[node name="Label" parent="." instance=ExtResource( 10 )]
text = "escolhas"

[node name="AndroidControls" parent="." instance=ExtResource( 3 )]
[connection signal="body_entered" from="botoes/botao1" to="." method="_on_botao1_body_entered"]
[connection signal="body_entered" from="botoes/botao2" to="." method="_on_botao2_body_entered"]
[connection signal="body_entered" from="botoes/botao3" to="." method="_on_botao3_body_entered"]
